--- a/app/src/main/res/layout/fragment_bundles.xml
+++ b/app/src/main/res/layout/fragment_bundles.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.core.widget.NestedScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_semibold"
                 android:includeFontPadding="false"
-                android:text="Mes forfaits"
+                android:text="@string/Bundles_title"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
@@ -59,15 +59,16 @@
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/bundleName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:fontFamily="@font/montserrat_medium"
                         android:gravity="end"
                         android:includeFontPadding="false"
-                        android:text="Intennet 30 GO\nAppels, SMS illimités"
                         android:textColor="@color/black"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        tools:text="Intennet 30 GO\nAppels, SMS illimités" />
 
                 </RelativeLayout>
 
@@ -88,15 +89,16 @@
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/msisdn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:fontFamily="@font/montserrat_medium"
                         android:gravity="end"
                         android:includeFontPadding="false"
-                        android:text="06 55 64 04 11"
                         android:textColor="@color/black"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        tools:text="06 55 64 04 11" />
 
                 </RelativeLayout>
 
@@ -117,6 +119,7 @@
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -155,6 +158,7 @@
                         android:textSize="13sp" />
 
                     <TextView
+                        android:id="@+id/total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
@@ -190,63 +194,8 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/grey1"
                 android:fontFamily="@font/montserrat_extrabold"
-                android:text="changer mon forfait"
+                android:text="@string/update_bundle_btn_label"
                 app:cornerRadius="7dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="15dp"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/bundle1Btn"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.3"
-                    android:backgroundTint="@color/grey5"
-                    android:fontFamily="@font/montserrat_extrabold"
-                    android:text="Intra forfait"
-                    android:textAllCaps="false"
-                    android:textSize="9sp"
-                    app:cornerRadius="7dp" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.02" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/bundle2Btn"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.3"
-                    android:backgroundTint="@color/grey5"
-                    android:fontFamily="@font/montserrat_extrabold"
-                    android:text="Jawal"
-                    android:textAllCaps="false"
-                    android:textSize="9sp"
-                    app:cornerRadius="7dp" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.02" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/bundle3Btn"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.3"
-                    android:backgroundTint="@color/grey5"
-                    android:fontFamily="@font/montserrat_extrabold"
-                    android:padding="0dp"
-                    android:singleLine="true"
-                    android:text="PTS Post payés"
-                    android:textAllCaps="false"
-                    android:textSize="9sp"
-                    app:cornerRadius="7dp" />
-            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/bundlesList"
@@ -255,7 +204,8 @@
                 android:layout_marginTop="20dp"
                 android:alpha="0.4"
                 android:background="@drawable/white_background"
-                android:backgroundTint="@color/grey9">
+                android:backgroundTint="@color/grey9"
+                android:visibility="gone">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/bundlesRecycler"
@@ -277,7 +227,8 @@
                 android:background="@drawable/white_background"
                 android:elevation="10dp"
                 android:orientation="vertical"
-                android:paddingVertical="20dp">
+                android:paddingVertical="20dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -513,5 +464,14 @@
             </LinearLayout>
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/loader"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:scaleType="fitXY"
+            android:src="@mipmap/loader"
+            android:visibility="gone" />
+    </RelativeLayout>
 </layout>
