--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -205,9 +205,21 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/grey1"
             android:fontFamily="@font/montserrat_extrabold"
-            android:text="payer ce forfait"
+            android:text="@string/buy_bundle_btn_label"
             app:cornerRadius="7dp"
             app:layout_constraintTop_toBottomOf="@id/body" />
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/loader"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/loader"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
