--- a/app/src/main/res/layout/payment_item_layout.xml
+++ b/app/src/main/res/layout/payment_item_layout.xml
@@ -13,6 +13,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
@@ -22,6 +23,7 @@
                 android:textSize="13sp" />
 
             <TextView
+                android:id="@+id/subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
@@ -31,6 +33,7 @@
                 android:textSize="10sp" />
 
             <TextView
+                android:id="@+id/msisdn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
@@ -41,6 +44,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
